# NewSearchEngine

tests/: CMakeLists.txt  test_search_engine.cpp
